syntax = "proto3";
package cosmos_sdk.ibc.solomachine.v1;

option go_package = "github.com/cosmos/cosmos-sdk/x/ibc/06-solomachine/types";

import "google/protobuf/any.proto";
import "third_party/proto/gogoproto/gogo.proto";

// MsgCreateClient defines a message to create an IBC client
message MsgCreateClient {
    option (gogoproto.goproto_getters)  = false;
    string client_id = 1 [(gogoproto.customname) = "ClientID", (gogoproto.moretags) = "yaml:\"client_id\""];
    ConsensusState consensus_state    = 2 [(gogoproto.nullable) = false];
}

// MsgUpdateClient defines a message to update an IBC client
message MsgUpdateClient {
    option (gogoproto.goproto_getters)  = false;
    string client_id = 1 [(gogoproto.customname) = "ClientID", (gogoproto.moretags) = "yaml:\"client_id\""];
    Header header    = 2 [(gogoproto.nullable) = false];
}

// MsgSubmitClientMisbehaviour defines an sdk.Msg type that supports submitting arbitrary
// Evidence.
message MsgSubmitClientMisbehaviour {
  option (gogoproto.goproto_getters)  = false;
  bytes submitter = 1 [(gogoproto.casttype) = "github.com/cosmos/cosmos-sdk/types.AccAddress"];
  google.protobuf.Any evidence = 2;
}

// ConsensusState defines a solo machine consensus state
message ConsensusState {
  option (gogoproto.goproto_getters) = false;
  // current sequence of the consensus state
  uint64 sequence = 1;
  // public key of the solo machine
  google.protobuf.Any pub_key = 2;
}

// Header defines a solo machine consensus header
message Header {
    option (gogoproto.goproto_getters) = false;
    // sequence to update solo machine public key at
    uint64 sequence = 1;
    bytes signature = 2;
    google.protobuf.Any new_pub_key = 3;
}
